<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.waabox</groupId>
  <artifactId>andersoni</artifactId>

  <version>1.10.2</version>

  <packaging>pom</packaging>

  <name>Andersoni</name>
  <description>
    In-memory indexed cache library for Java 21.
  </description>
  <url>https://github.com/waabox/andersoni</url>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>waabox</id>
      <name>Emiliano Arango</name>
      <email>waabox@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/waabox/andersoni.git</connection>
    <developerConnection>scm:git:ssh://github.com:waabox/andersoni.git</developerConnection>
    <url>https://github.com/waabox/andersoni</url>
  </scm>

  <modules>
    <module>andersoni-core</module>
    <module>andersoni-sync-kafka</module>
    <module>andersoni-spring-sync-kafka</module>
    <module>andersoni-sync-http</module>
    <module>andersoni-sync-db</module>
    <module>andersoni-leader-k8s</module>
    <module>andersoni-snapshot-s3</module>
    <module>andersoni-snapshot-fs</module>
    <module>andersoni-json-serializer</module>
    <module>andersoni-spring-boot-starter</module>
    <module>andersoni-admin</module>
    <module>andersoni-metrics-datadog</module>
    <module>andersoni-cluster-it</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>

    <!-- Dependency versions -->
    <junit.version>5.11.4</junit.version>
    <easymock.version>5.5.0</easymock.version>
    <slf4j.version>2.0.16</slf4j.version>
    <org.json.version>20251224</org.json.version>
    <dogstatsd.version>4.4.5</dogstatsd.version>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- Andersoni core -->
      <dependency>
        <groupId>io.github.waabox</groupId>
        <artifactId>andersoni-core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Logging -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <!-- JSON (lightweight) -->
      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>${org.json.version}</version>
      </dependency>

      <!-- Datadog DogStatsD -->
      <dependency>
        <groupId>com.datadoghq</groupId>
        <artifactId>java-dogstatsd-client</artifactId>
        <version>${dogstatsd.version}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.easymock</groupId>
        <artifactId>easymock</artifactId>
        <version>${easymock.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${slf4j.version}</version>
        <scope>test</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.11.2</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.7</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.6.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <autoPublish>true</autoPublish>
            </configuration>
          </plugin>

        </plugins>
      </build>
    </profile>
  </profiles>

</project>
